--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ mysqlclient==2.1.1
 pycparser==2.20
 pytz
 six==1.14.0
-sqlparse==0.3.1
 uWSGI==2.0.20
 arrow==0.15.8
 beautifulsoup4==4.9.0
@@ -36,5 +35,6 @@ psycopg2==2.9.1
 asgiref
 html5lib
 lxml
-djongo==1.3.3
+djongo
+sqlparse
 
